--- a/data/test.properties
+++ b/data/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Sun Jan 21 11:37:16 CET 2018
+#Sun Feb 25 16:25:13 CET 2018
 version=2.3.3
-modified=yes
+modified=no
 tx_timestamp=0
